<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_menu_itemid_restaurant"
            android:icon="@drawable/ic_restaurant_black_48dp"
            android:title="@string/restaurant"/>
        <item
            android:id="@+id/navigation_menu_itemid_menu"
            android:icon="@drawable/ic_restaurant_menu_black_48dp"
            android:title="@string/menu"/>
        <item
            android:id="@+id/navigation_menu_itemid_cart"
            android:icon="@drawable/ic_shopping_cart_black_48dp"
            android:title="@string/cart"/>
        <item
            android:id="@+id/navigation_menu_itemid_favorite"
            android:icon="@drawable/ic_favorite_border_black_48dp"
            android:title="@string/favorite"/>
        <item
            android:id="@+id/navigation_menu_itemid_gallery"
            android:icon="@drawable/ic_photo_gallery_black_48dp"
            android:title="@string/gallery"/>
        <item
            android:id="@+id/navigation_menu_itemid_location"
            android:icon="@drawable/ic_location_on_black_48dp"
            android:title="@string/location"/>
    </group>

    <item android:title="@string/advance_option">
        <menu>
            <item
                android:id="@+id/navigation_menu_itemid_news"
                android:icon="@drawable/ic_news_black_48dp"
                android:title="@string/news"/>
            <item
                android:id="@+id/navigation_menu_itemid_social"
                android:icon="@drawable/ic_social_black_48dp"
                android:title="@string/social"/>
            <item
                android:id="@+id/navigation_menu_itemid_about"
                android:icon="@drawable/ic_about_black_48dp"
                android:title="@string/about"/>
        </menu>
    </item>

</menu>